--- a/README
+++ b/README
@@ -3,19 +3,13 @@ Ian Baraka.
 ## Description.
 A web page that displays  peoeple's birthday and displays their username. 
 ### Link to live page
-
-
-
-## Technologies used.
--HTML
--CSS
--J.SCRIPT
-
+https://barakaian.github.io/birthday-forms/
 
 #### Setup/Installation Requirements.
+
 -Log in your PC and open your Terminal and create a folder.
 -Clone this repo into the folder using command line below
--git clone(https://barakaian.github.io/user-website/.)
+-git clone(https://barakaian.github.io/birthday-forms/)
 -Open it in an editor "Atom, VScode" etc.
 -Contribute and push your changes to your repository.
 
